# openai-semantic-search-api

./: .dockerignore  .env  .env_example  .gitignore  Dockerfile  README.md  code_architecture_diagram.drawio  deployment_architecture_diagram.drawio  dockercompose.yml  exploration.ipynb  main.py  pyproject.toml
database/: tables.py
local_database/: database_setup.py  docker-compose.yml
semantic_search_api/: __init__.py  config.py  main.py
semantic_search_api/api/: main.py
semantic_search_api/api/routes/: data_load.py  query.py
semantic_search_api/database/: data_ingestion.py  database_query.py  tables.py
semantic_search_api/local_database/: database_setup.py
semantic_search_api/oai_operations/: rerank_results.py  search_workflow.py
tests/: conftest.py  small_test_data.jsonl  test_api.py  test_data_ingestion.py  test_queries.py
