[project]
name = "openai-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]


[tool.ruff.lint]
select = ["F401"]